# ncmpcpp2

./: .gitignore  CHANGELOG.md  C_MIGRATION_INVENTORY.md  DELETE_FILES.txt  INSTALL  Makefile  Makefile.am  README.md  REMOVED_FILES.txt  TODO.md  build.sh  c-format.md  c-guidelines.md  c-migration-order.txt  c-migration-patterns.txt  c-style.md  configure.ac  first-search-engine-bug.txt  ignored.txt  patterns.list  remaining_c++_files.txt  slowness_commit.txt  style.sed  style.sh
.github/workflows/: build.yml
cbase/: Makefile  Makefile.am  array.h  base_macros.h  cbase.c  cbase.h  tags  utf8.c  util.c  util.h
doc/: Makefile  config  lyrics_fetches.md  ncmpcpp.1  ncmpcpp2.1  playlist-c-migration-baseline.md  playlist-c-migration-inventory.md  playlist-c-migration-validation.md
extras/: Makefile
src/: Makefile  Makefile.am  actions.c  actions.cpp  actions.h  actions_legacy.cpp  actions_legacy.h  actions_legacy_runtime.h  app_binding_migration.c  app_binding_migration.h  app_controller.c  app_controller.h  app_legacy_bridge.c  app_legacy_bridge.h  app_state.c  app_state.h  bindings.c  bindings.cpp  bindings.h  bindings_legacy.cpp  bindings_legacy.h  charset.cpp  charset.h  config.h  configuration.c  configuration.cpp  configuration.h  configuration_legacy.cpp  configuration_legacy.h  curl_handle.c  curl_handle.h  display.cpp  display.h  enums.h  format.cpp  format.h  format_impl.h  global.c  global.cpp  global.h  (+57 more)
src/c/: ncm_any_iterator.h  ncm_app_arrays.c  ncm_app_arrays.h  ncm_array.h  ncm_base.c  ncm_base.h  ncm_charset.c  ncm_charset.h  ncm_comparators.c  ncm_comparators.h  ncm_conversion.c  ncm_conversion.h  ncm_defs.h  ncm_directory.c  ncm_directory.h  ncm_display.c  ncm_display.h  ncm_enums.c  ncm_enums.h  ncm_error.c  ncm_error.h  ncm_format.c  ncm_format.h  ncm_fs.c  ncm_fs.h  ncm_functional.c  ncm_functional.h  ncm_html.c  ncm_html.h  ncm_iterator.c  ncm_iterator.h  ncm_job.c  ncm_job.h  ncm_log.c  ncm_log.h  ncm_macro_utilities.c  ncm_macro_utilities.h  ncm_mpd_client.c  ncm_mpd_client.h  ncm_mpd_connection.c  (+50 more)
src/curses/: formatted_color.cpp  formatted_color.h  formatted_color_compat_impl.h  menu.h  menu_impl.h  nc_app_menus.c  nc_app_menus.h  nc_buffer.c  nc_buffer.h  nc_cyclic_buffer.c  nc_cyclic_buffer.h  nc_formatted_color.c  nc_formatted_color.h  nc_menu.c  nc_menu.h  nc_scrollpad.c  nc_scrollpad.h  nc_window.c  nc_window.h  scrollpad.cpp  scrollpad.h  scrollpad_compat_impl.h  strbuffer.h  window.cpp  window.h  window_compat_impl.h
src/helpers/: song_iterator_maker.h
src/screens/: browser.cpp  browser.h  help.cpp  help.h  help_bridge.cpp  lastfm.cpp  lastfm.h  lyrics.cpp  lyrics.h  media_library.cpp  media_library.h  native_c_screens.c  native_c_screens.cpp  native_c_screens.h  nc_browser.c  nc_browser.h  nc_help.c  nc_help.h  nc_lastfm.c  nc_lastfm.h  nc_lyrics.c  nc_lyrics.h  nc_media_library.c  nc_media_library.h  nc_outputs.c  nc_outputs.h  nc_playlist.c  nc_playlist.h  nc_playlist_editor.c  nc_playlist_editor.h  nc_screen.c  nc_screen.h  nc_screen_switcher.c  nc_scrollpad_screen.c  nc_scrollpad_screen.h  nc_search_engine.c  nc_search_engine.h  nc_sel_items_adder.c  nc_sel_items_adder.h  nc_server_info.c  (+49 more)
src/utility/: any_iterator.h  comparators.cpp  comparators.h  const.h  conversion.h  functional.h  html.cpp  html.h  option_parser.cpp  option_parser.h  readline.h  regex.h  sample_buffer.cpp  sample_buffer.h  scoped_value.h  shared_resource.h  storage_kind.h  string.cpp  string.h  string_format.h  transform_iterator.h  type_conversions.cpp  type_conversions.h  utf8.cpp  utf8.h  wide_string.cpp  wide_string.h
tests/: Makefile  Makefile.am  c_actions_test.c  c_bindings_test.c  c_browser_binding_dispatch_test.c  c_browser_screen_test.c  c_configuration_test.c  c_enums_global_test.c  c_format_display_test.c  c_foundation_test.c  c_helpers_test.c  c_infrastructure_test.c  c_lastfm_lyrics_visualizer_test.c  c_lyrics_fetcher_test.c  c_media_library_integration_test.c  c_media_library_screen_test.c  c_menu_substrate_test.c  c_mpd_client_test.c  c_mpd_model_test.c  c_mutable_song_test.c  c_playlist_actions_test.c  c_playlist_binding_dispatch_test.c  c_playlist_editor_binding_dispatch_test.c  c_playlist_editor_screen_test.c  c_playlist_management_dialogs_test.c  c_playlist_screen_test.c  c_playlist_sort_test.c  c_screen_actions_test.c  c_screen_registry_bridge_test.c  c_search_engine_screen_test.c  c_selected_items_adder_action_test.c  c_song_list_test.c  c_sort_action_binding_test.c  c_sort_playlist_dialog_test.c  c_status_test.c  c_statusbar_test.c  c_tag_editor_binding_dispatch_test.c  c_tag_editor_screen_test.c  c_tag_editors_test.c  c_utility_migration_test.c  (+16 more)
tests/lyrics/: amalgama.html  azlyrics.html  genius.html  lacoccinelle.html  letrasmus.html  musica.html  musixmatch.html  paroles.html  tekstowo.html  todo.md  vagalume.html
tests/mpd/: tag.h
tools/: no-cxx-scan.py
