noinst_LTLIBRARIES = libcbase.la

libcbase_la_SOURCES = \
	cbase.c \
	cbase.h \
	cbase_config.h

EXTRA_DIST = \
	arena.c \
	array.h \
	assert.c \
	base_macros.h \
	clamp.h \
	generic.c \
	hash.c \
	i18n.h \
	memory.c \
	meta.h \
	meta_generate.c \
	meta_parse.c \
	meta_tokenize.c \
	minmax.c \
	platform_detection.h \
	primitives.h \
	rapidhash.h \
	rw_function.h \
	sfa.h \
	sort.c \
	utf8.c \
	util.c \
	util.h \
	xenums.c
