noinst_LTLIBRARIES = libncmpcpp_c.la

libncmpcpp_c_la_SOURCES = \
	c/ncm_base.c \
	c/ncm_directory.c \
	c/ncm_error.c \
	c/ncm_html.c \
	c/ncm_mpd_connection.c \
	c/ncm_mpd_item.c \
	c/ncm_mutable_song.c \
	c/ncm_path.c \
	c/ncm_playlist.c \
	c/ncm_sample_buffer.c \
	c/ncm_song.c \
	c/ncm_string.c \
	c/ncm_taglib.c \
	c/ncm_tags.c \
	c/ncm_type_conversions.c \
	c/ncm_utf8.c

bin_PROGRAMS = ncmpcpp
ncmpcpp_SOURCES = \
	curses/formatted_color.cpp \
	curses/nc_buffer.c \
	curses/nc_formatted_color.c \
	curses/nc_menu.c \
	curses/nc_scrollpad.c \
	curses/nc_window.c \
	curses/scrollpad.cpp \
	curses/window.cpp \
	screens/browser.cpp \
	screens/help.cpp \
	screens/lastfm.cpp \
	screens/lyrics.cpp \
	screens/media_library.cpp \
	screens/outputs.cpp \
	screens/playlist.cpp \
	screens/playlist_editor.cpp \
	screens/screen.cpp \
	screens/screen_type.cpp \
	screens/search_engine.cpp \
	screens/sel_items_adder.cpp \
	screens/server_info.cpp \
	screens/song_info.cpp \
	screens/sort_playlist.cpp \
	screens/tag_editor.cpp \
	screens/tiny_tag_editor.cpp \
	screens/visualizer.cpp \
	utility/comparators.cpp \
	utility/html.cpp \
	utility/option_parser.cpp \
	utility/sample_buffer.cpp \
	utility/string.cpp \
	utility/utf8.cpp \
	actions.cpp \
	bindings.cpp \
	charset.cpp \
	configuration.cpp \
	curl_handle.cpp \
	display.cpp \
	enums.cpp \
	format.cpp \
	global.cpp \
	helpers.cpp \
	lastfm_service.cpp \
	lyrics_fetcher.cpp \
	macro_utilities.cpp \
	mpdpp.cpp \
	mutable_song.cpp \
	ncmpcpp.cpp \
	settings.cpp \
	song.cpp \
	song_list.cpp \
	status.cpp \
	statusbar.cpp \
	tags.cpp \
	title.cpp

# set the include path found by configure
AM_CPPFLAGS= $(all_includes)

# the library search path.
ncmpcpp_LDFLAGS = $(all_libraries)
ncmpcpp_LDADD = libncmpcpp_c.la ../cbase/libcbase.la
noinst_HEADERS = \
	c/ncm_base.h \
	c/ncm_defs.h \
	c/ncm_directory.h \
	c/ncm_error.h \
	c/ncm_html.h \
	c/ncm_mpd_connection.h \
	c/ncm_mpd_item.h \
	c/ncm_mutable_song.h \
	c/ncm_path.h \
	c/ncm_playlist.h \
	c/ncm_sample_buffer.h \
	c/ncm_song.h \
	c/ncm_string.h \
	c/ncm_taglib.h \
	c/ncm_tags.h \
	c/ncm_type_conversions.h \
	c/ncm_utf8.h \
	curses/formatted_color.h \
	curses/menu.h \
	curses/menu_impl.h \
	curses/nc_buffer.h \
	curses/nc_formatted_color.h \
	curses/nc_menu.h \
	curses/nc_scrollpad.h \
	curses/nc_window.h \
	curses/scrollpad.h \
	curses/strbuffer.h \
	curses/window.h \
	screens/browser.h \
	screens/help.h \
	screens/lastfm.h \
	screens/lyrics.h \
	screens/media_library.h \
	screens/outputs.h \
	screens/playlist_editor.h \
	screens/screen.h \
	screens/screen_switcher.h \
	screens/screen_type.h \
	screens/search_engine.h \
	screens/sel_items_adder.h \
	screens/server_info.h \
	screens/song_info.h \
	screens/sort_playlist.h \
	screens/tag_editor.h \
	screens/tiny_tag_editor.h \
	screens/visualizer.h \
	utility/any_iterator.h \
	utility/comparators.h \
	utility/const.h \
	utility/conversion.h \
	utility/functional.h \
	utility/html.h \
	utility/option_parser.h \
	utility/readline.h \
	utility/regex.h \
	utility/sample_buffer.h \
	utility/scoped_value.h \
	utility/storage_kind.h \
	utility/shared_resource.h \
	utility/string.h \
	utility/utf8.h \
	bindings.h \
	charset.h \
	configuration.h \
	curl_handle.h \
	display.h \
	enums.h \
	format.h \
	format_impl.h \
	global.h \
	helpers.h \
	helpers/song_iterator_maker.h \
	interfaces.h \
	lastfm_service.h \
	lyrics_fetcher.h \
	macro_utilities.h \
	mpdpp.h \
	mutable_song.h \
	regex_filter.h \
	runnable_item.h \
	settings.h \
	song.h \
	song_list.h \
	status.h \
	statusbar.h \
	tags.h \
	title.h
